# agent-bench

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
agent_bench/: __init__.py  cli.py  collector.py  config.py  detector.py  pricing.py  reporter.py  runner.py  scorer.py  storage.py  web_reporter.py
tests/: test_cli.py  test_collector.py  test_config.py  test_detector.py  test_edge_cases.py  test_extended.py  test_model_comparison.py  test_new_scoring.py  test_nightshift_improvements.py  test_pricing.py  test_reporter.py  test_scorer.py  test_storage.py  test_v07.py  test_v071.py  test_v08.py  test_v09_edge_cases.py  test_v3_features.py  test_v4_features.py  test_v5_features.py  test_web_radar.py
